--- a/w8_Wechat/bdMusic/pages/index/index.wxml
+++ b/w8_Wechat/bdMusic/pages/index/index.wxml
@@ -1,7 +1,9 @@
-<!--index.wxml-->
+<!--引入模板文件-->
+<import src="/template.wxml"/>
+
 <view class="container">
   <swiper indicator-dots autoplay>
-    <swiper-item wx:for="{{recommend}}" wx:key="song_id" >
+    <swiper-item wx:for="{{recommend}}" wx:key="song_id" data-id="{{item.song_id}}" bind:tap="goto">
       <image src="{{item.pic_s500}}" style="width:100%;" />
     </swiper-item>
   </swiper>
@@ -18,3 +20,24 @@
       <view class="weui-search-bar__text">{{keyword}}</view>
   </label>
 </view>
+
+<!-- tab标签切换 -->
+<view class="weui-tab">
+  <view class="weui-navbar">
+      <block wx:for="{{tabs}}" wx:key="type">
+          <view data-idx="{{index}}" data-type="{{item.type}}" class="weui-navbar__item {{activeIndex == index ? 'weui-bar__item_on' : ''}}" bind:tap="handlerTabChange">
+              <view class="weui-navbar__title">{{item.text}}</view>
+          </view>
+      </block>
+      <view class="weui-navbar__slider" style="width: {{tabWidth}}px; transform: translateX({{sliderOffset}}px); "></view>
+  </view>
+  <view class="weui-tab__panel">
+      <view wx:for="{{tabs}}" wx:key="type" class="weui-tab__content" hidden="{{activeIndex != index}}">
+        <template is="list" data="{{datalist:tabData[item.type]}}"/>
+        <template is="more" data="{{type:item.type}}"/>
+      </view>
+  </view>
+</view>
+
+<template is="panel" data="{{datalist:classicSong,title:'经典老歌',type:22}}"/>
+<template is="panel" data="{{datalist:loveSong,title:'情歌对唱',type:23}}"/>
