--- a/w8_Wechat/bdMusic/template.wxml
+++ b/w8_Wechat/bdMusic/template.wxml
@@ -1,5 +1,5 @@
 <template name="list">
-  <navigator wx:for="{{datalist}}" wx:key="song_id" url="/pages/detail/detail?id={{item.song_id}}" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+  <navigator wx:for="{{datalist}}" wx:key="song_id" url="/pages/player/player?id={{item.song_id}}" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
     <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
       <image class="weui-media-box__thumb" src="{{item.pic_small}}" />
     </view>
@@ -11,9 +11,11 @@
 </template>
 
 <template name="more">
-  <view class="weui-cell weui-cell_access weui-cell_link" data-type="{{type}}" bindtap="gotoList">
-    <view class="weui-cell__bd">查看更多</view>
-    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+  <view class="weui-cell weui-cell_access weui-cell_link">
+    <navigator url="/pages/list/list?type={{type}}">
+      <view class="weui-cell__bd">查看更多</view>
+      <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+    </navigator>
   </view>
 </template>
 
